# swagger/swagger.json
@@ -959,6 +959,49 @@
                         "description": "Not found"
                     }
                 }
+            },
+            "post": {
+                "tags": [ "Match" ],
+                "summary": "Create a new match",
+                "operationId": "Match_createMatch",
+                "consumes": [ "application/json", "text/json" ],
+                "produces": [ "application/json", "text/json", "application/xml", "text/xml" ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/MatchReadDTO"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "match",
+                        "in": "body",
+                        "description": "Match to be created",
+                        "schema": {
+                            "type": "object",
+                            "items": {
+                                "$ref": "#/definitions/MatchCreateDTO"
+                            }
+                        }
+                    }
+                ]
             }
         },
         "/INSO22A/api/matches.php?id={id}": {
@@ -1034,7 +1077,7 @@
                 },
                 "parameters": [
                     {
-                        "name": "dat",
+                        "name": "date",
                         "in": "path",
                         "type": "string",
                         "required": true,
@@ -1728,6 +1771,43 @@
                 "es": {
                     "type": "string",
                     "description": "SecQuestion's name in Spanish"
+                }
+            }
+        },
+        "MatchCreateDTO": {
+            "type" : "object",
+            "properties": {
+                "matchdate": {
+                    "type": "string",
+                    "description": "Match's date"
+                },
+                "matchtime": {
+                    "type": "string",
+                    "description": "Match's time"
+                },
+                "team1": {
+                    "type": "integer",
+                    "description": "Team1's ID"
+                },
+                "team2": {
+                    "type": "integer",
+                    "description": "Team2's ID"
+                },
+                "score1": {
+                    "type": "integer",
+                    "description": "Team1's score"
+                },
+                "score2": {
+                    "type": "integer",
+                    "description": "Team2's score"
+                },
+                "duration": {
+                    "type": "integer",
+                    "description": "Match's duration"
+                },
+                "location": {
+                    "type": "string",
+                    "description": "Match's location"
                 }
             }
         },
